crates/typestate-pipeline/tests/ui/nightly/transitions_on_trait_impl.stderr
error: #[transitions] can only be applied to inherent impl blocks
  --> tests/ui/nightly/transitions_on_trait_impl.rs:14:10
   |
14 | impl<'a> Noop for Author<'a, A> {
   |          ^^^^
   |
   = help: move these methods to an inherent `impl <Carrier>` block; the macro expands every `#[transition]` into a Resolved + InFlight method pair on the carrier and that requires inherent self
